# grimoire

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTINUE.md  CONTRIBUTING.md  Dockerfile  METRICS.md  README.md  app.py  bigbase.yaml  config.yaml  config.yaml.example  docker-compose.yml  docker-entrypoint.sh  justfile  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd-pages-mkdocs.yml  ci-cd-python.yml  ci.yml  codeql.yml  deploy-docs.yml  deploy.yml  docs.yaml  test-build-release-docs.yml  test-build-release.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1783828675591-playful-cactus.md
.pi/: mcp.json
data/: setup.sh
data/actions/: rerun-failed-pr-workflows.yaml  test.yaml
data/checks/: charmcraft-fetch-lib.yaml  ci-cd-migration.yaml  ci-cd-pipeline-audit.yaml  uv-lock-fresh.yaml  watchdog.yaml
docs/: 00-overview.md  01-scaffolding-and-configuration.md  02-github-data-service.md  04-checks-engine.md  05-actions-engine.md  06-web-application.md  07-observability-and-devops.md  08-history.md
docs/specs/: 00-overview.md  01-scaffolding-and-configuration.md  02-github-data-service.md  03-workspace-manager.md  04-checks-engine.md  05-actions-engine.md  06-web-application.md  07-observability-and-devops.md
docs/user/: index.md  mkdocs.yml
docs/user/concepts/: architecture.md
docs/user/how-to/: deploy.md  write-a-check.md  write-an-action.md
docs/user/reference/: actions.md  api.md  checks.md  configuration.md
docs/user/tutorials/: getting-started.md
scripts/: preflight.sh
specs/epics/e09-fleet-checks/: epic.yaml
specs/epics/e10-ci-v3-migration/: epic.yaml
src/grimoire/: __init__.py  __main__.py  app.py  config.py  database.py  models.py  script.py  targeting.py
src/grimoire/actions/: engine.py  loader.py  router.py  scheduler.py
src/grimoire/checks/: engine.py  loader.py  router.py  scheduler.py
src/grimoire/github/: client.py  router.py  schemas.py  service.py
src/grimoire/history/: router.py
src/grimoire/observability/: logging.py  metrics.py
src/grimoire/web/: backlog.py  router.py
src/grimoire/web/templates/: actions.html  backlog.html  base.html  checks.html  dashboard.html  (+4 more)
src/grimoire/workspace/: manager.py
tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_script.py
tests/test_actions/: test_engine.py  test_engine_failure_modes.py  test_loader.py  test_router.py  test_scheduler.py
tests/test_checks/: test_engine.py  test_loader.py  test_router.py  test_scheduler.py  test_targeting.py
tests/test_github/: test_client.py  test_router.py  test_service.py
tests/test_history/: test_history.py
tests/test_observability/: test_logging.py  test_metrics.py
tests/test_web/: conftest.py  test_backlog.py  test_contract.py  test_router.py  test_viewmodel.py
tests/test_workspace/: test_manager.py
(+13 files in other folders)
