[project]
name = "grimoire-dashboard"
version = "0.1.8"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21",
    "apscheduler>=3.11,<4",
    "dataconfy>=0.0.3",
    "fastapi>=0.115",
    "httpx>=0.28",
    "jinja2>=3.1",
    "opentelemetry-api>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-sdk>=1.30",
    "prometheus-client>=0.22",
    "pydantic>=2.10",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "actionlint-py>=1.7.10.24",
    "codespell>=2.4.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "pytest-sugar>=1.0",
    "respx>=0.22",
    "ruff>=0.8",
    "uv-secure>=0.2",
    "vulture>=2.13",
]
docs = [
    "mkdocs-material>=9.5",
]
